--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "legalgeek",
   "license": "ISC",
   "devDependencies": {
+    "@vuepress/plugin-container": "^2.0.0-beta.61",
+    "@vuepress/plugin-docsearch": "^2.0.0-beta.61",
     "vuepress": "^2.0.0-beta.61"
   }
 }
