--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "docs:dev": "vuepress dev docs",
-    "docs:build": "vuepress build docs"
+    "docs:build": "vuepress build docs",
+    "deploy": "node ./scripts/deploy.js"
   },
   "author": "legalgeek",
   "license": "ISC",
@@ -13,5 +14,8 @@
     "@vuepress/plugin-container": "^2.0.0-beta.61",
     "@vuepress/plugin-docsearch": "^2.0.0-beta.61",
     "vuepress": "^2.0.0-beta.61"
+  },
+  "dependencies": {
+    "ssh2-sftp-client": "^9.0.4"
   }
 }
